<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="#E8F5E9">

    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:text="@string/register"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLoginTitle"
        android:layout_marginTop="43dp"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:background="@drawable/edit_text_background"/>

    <EditText
        android:id="@+id/etMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etName"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:inputType="text"
        android:background="@drawable/edit_text_background"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etMail"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_background"/>

    <EditText
        android:id="@+id/etPlate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="16dp"
        android:hint="@string/plate_hint"
        android:inputType="text"
        android:background="@drawable/edit_text_background"/>


    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPlate"
        android:text="Sign-Up"
        style="@style/CustomButtonStyle"/>

    <TextView
        android:id="@+id/tvAlreadyAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already have an account?"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/tvGoToLogin"
        android:layout_marginBottom="2dp"
        android:textColor="#000"/>


    <TextView
        android:id="@+id/tvGoToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:textColor="#00695C"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"/>

</RelativeLayout>